--- a/atividade06/app/src/global.css
+++ b/atividade06/app/src/global.css
@@ -4,7 +4,8 @@
 }
 
 body,
-html {
+html,
+#root {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -15,4 +16,41 @@ html {
   background-color: white;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 14px;
+}
+
+form {
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+form > input {
+  width: 100%;
+  margin: 12px 0;
+  padding: 12px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+}
+
+button {
+  width: auto;
+  height: auto;
+  padding: 12px 16px;
+  margin: 12px 32px;
+  background-color: #5d2be7;
+  color: white;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  font-weight: 700;
+  cursor: pointer;
+  transition: 0.3s all ease-in-out;
+}
+
+button:hover {
+  color: #5d2be7;
+  background-color: white;
+  border: 1px solid #5d2be7;
 }
